# run-confluence-locally

./: .gitignore  Confluence_Singularity_SLURM_Builder.ipynb  Confluence_hpc.ipynb  README.md  cfl_SLURM_wrapper.sh  config.yml  environment.yml  kill_jobs.sh  local_confluence_notebook.ipynb  pyproject.toml  requirements.txt  run.py  run_confluence_SLURM.ipynb  run_confluence_docker.ipynb  run_confluence_docker_local.ipynb  run_confluence_hpc.ipynb  run_confluence_local.ipynb  run_confluence_local_windows.ipynb  run_confluence_singularity_hpc.ipynb  run_modules.py  v4_short_run.ipynb
.ipynb_checkpoints/: Confluence_Singularity_SLURM_Builder-checkpoint.ipynb  pyproject-checkpoint.toml  run_confluence_docker_local-checkpoint.ipynb  run_confluence_singularity_hpc-checkpoint.ipynb
configs/examples/: 1_end_to_end.yml  2_partial_run.yml  3a_development_setup.yml  3b_development_iterate.yml
confluence/: continent.json
confluence.egg-info/: PKG-INFO  SOURCES.txt
confluence/templates/: sbatch.sh.j2  slurm_driver.sh.j2
confluence/utils/: config.py  df_outputs.py  dir_structure.py  module_images.py  module_names.py  scripts.py  (+1 more)
dep/: Confluence_Singularity_SLURM_Builder.ipynb  Run_Confluence_SLURM.sh  run_confluence_SLURM.ipynb  run_confluence_docker.ipynb  run_confluence_docker_local.ipynb  run_confluence_singularity_hpc.ipynb
examples/: 1_end_to_end.yml  2_partial_run.yml  3a_development_setup.yml  3b_development_iterate.yml  test.yml  v4D_short.yml
run_confluence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: run.py
templates/: driver_template.sh.j2
(+46 files in other folders)
