[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-runner"
version = "0.1.0"
description = "Confluence pipeline runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "pyyaml==6.0.3",
    "ruff==0.15.15"
]