[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "run_confluence"
version = "0.1.0"
description = "Confluence pipeline runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml==6.0.3",
    "requests>=2.34.2",
    "ruff==0.15.15",
    "zenodo-get>=3.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]